test/Fail/Issue3582.err
Issue3582.agda:8.7-8: error: [UnequalTypes]
The types
  Prop₁
and
  Prop
are not equal
when checking that the expression P has type Prop
